Fix responsive spacing for Card styles.

--- a/src/theme/components/Workbench/Card/styles.module.css
+++ b/src/theme/components/Workbench/Card/styles.module.css
@@ -5,9 +5,9 @@
     align-items: center;
 
     width: 100%;
-    padding: 0.5rem;
+    padding: var(--space-2xs);
 
-    border-radius: 0.5rem;
+    border-radius: var(--space-2xs);
 
     background-color: rgb(48, 56, 70);
     color: white;
